src/test/resources/api/WEB-INF/jsp/error/json/405.jsp
{
	"status":"405",
	"title":"Method Not Allowed",
	"description": "The method you are using to access the file is not allowed."
}
<%@ page contentType="application/json; charset=UTF-8"%>